--- a/index.html
+++ b/index.html
@@ -13,18 +13,28 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
+ <div class="container">
+   <div><img class="cube" src="./images/image-equilibrium.jpg" alt="Equilibrium"></div>
+   <div><h1>Equilibrium #3429</h1></div>
 
-  Equilibrium #3429
+   <div>Our Equilibrium collection promotes balance and calm.</div>
 
-  Our Equilibrium collection promotes balance and calm.
+   <div>
+     
+     <img src="./images/icon-ethereum.svg" alt="Ethereum icon"><span>0.041 ETH </span>
+     <img src="./images/icon-clock.svg" alt="clock icon">3 days left
 
-  0.041 ETH
-  3 days left
+   </div>
   
-  Creation of Jules Wyvern
-
+   <div>Creation of Jules Wyvern</div>
+ </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
