Finished desktop design

--- a/index.html
+++ b/index.html
@@ -26,18 +26,28 @@
 
    <div>Our Equilibrium collection promotes balance and calm.</div>
 
-   <div>
+   <div class="space-between">
      
-     <img src="./images/icon-ethereum.svg" alt="Ethereum icon"><span>0.041 ETH </span>
-     <img src="./images/icon-clock.svg" alt="clock icon">3 days left
+     <div>
+       <img class="icon" src="./images/icon-ethereum.svg" alt="Ethereum icon">
+       <span >0.041 ETH </span>
+     </div>
+
+     <div>
+       <img class="icon" src="./images/icon-clock.svg" alt="clock icon">
+       3 days left
+     </div>
 
    </div>
-  
-   <div>Creation of Jules Wyvern</div>
+   <hr size="0.5">
+   <div class=" creator-info">
+     <img class="avator" src="./images/image-avatar.png" alt="picture of jules wyvern">
+     Creation of <span class="creator-name">Jules Wyvern</span>
+   </div>
  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Fowzia Mehedi</a>.
   </div>
 </body>
 </html>
