Finished active status

--- a/index.html
+++ b/index.html
@@ -21,28 +21,46 @@
 </head>
 <body>
  <div class="container">
-   <div><img class="cube" src="./images/image-equilibrium.jpg" alt="Equilibrium"></div>
-   <div><h1>Equilibrium #3429</h1></div>
+
+   <div class="hover-image">
+
+     <img class="cube" src="./images/image-equilibrium.jpg" alt="Equilibrium">
+     <div class="overlay">
+      <img class="hover-icon" src="./images/icon-view.svg" alt="">
+     </div>
+
+   </div>
+
+   <div>
+     <span class="hover">
+       <h1>Equilibrium #3429</h1>
+     </span>
+   </div>
 
    <div>Our Equilibrium collection promotes balance and calm.</div>
 
    <div class="space-between">
      
      <div>
+
        <img class="icon" src="./images/icon-ethereum.svg" alt="Ethereum icon">
-       <span >0.041 ETH </span>
+       <span class="eth"  >0.041 ETH </span>
+
      </div>
 
      <div>
+
        <img class="icon" src="./images/icon-clock.svg" alt="clock icon">
        3 days left
+    
      </div>
 
    </div>
+
    <hr size="0.5">
    <div class=" creator-info">
      <img class="avator" src="./images/image-avatar.png" alt="picture of jules wyvern">
-     Creation of <span class="creator-name">Jules Wyvern</span>
+     Creation of <span class="creator-name hover">Jules Wyvern</span>
    </div>
  </div>
   <div class="attribution">
